# temporal-reflections-of-societal-norms-and-biases

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: occupation_decade_percentages_gender.csv  testcases.csv
notebooks/: benchmarking.ipynb  fine_tune_temporal_models.ipynb
scripts/: aggregate_harness_results.py  aggregate_unmasking_results.py  calculate_base_unmasking_probabilities.py  calculate_harness_results.py  calculate_unmasking_probabilities.py  check_cuda.py  download_data.sh  preprocess_data.py  train_models.py  visualize_pipeline.py  visualize_results.py
